// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductProperties /> should not render if no properties where passed 1`] = `
<Connect(ProductProperties)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductProperties
    dispatch={[Function]}
    properties={null}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <SurroundPortals
      portalName="product.properties"
      portalProps={
        Object {
          "properties": null,
        }
      }
    >
      <Content
        properties={null}
      />
    </SurroundPortals>
  </ProductProperties>
</Connect(ProductProperties)>
`;

exports[`<ProductProperties /> should render if properties are passed 1`] = `
<Connect(ProductProperties)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ProductProperties
    dispatch={[Function]}
    properties={
      Array [
        Object {
          "displayGroup": "test",
        },
      ]
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <SurroundPortals
      portalName="product.properties"
      portalProps={
        Object {
          "properties": Array [
            Object {
              "displayGroup": "test",
            },
          ],
        }
      }
    >
      <Content
        properties={
          Array [
            Object {
              "displayGroup": "test",
            },
          ]
        }
      >
        <Wrapper
          dense={false}
          groupName=""
          htmlOnly={false}
        >
          <div
            className="engage__product__product-property-group css-1x8awm9"
            data-group-name=""
          >
            <table>
              <thead />
              <tbody>
                <Rows
                  properties={
                    Array [
                      Object {
                        "displayGroup": "test",
                      },
                    ]
                  }
                >
                  <Row
                    key="undefined-undefined"
                    type={null}
                  >
                    <tr
                      className="engage__product__product-property"
                      data-type={null}
                    >
                      <td
                        className={
                          Object {
                            "data-css-fl9ufm": "",
                          }
                        }
                      >
                        <span
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": undefined,
                            }
                          }
                        />
                      </td>
                      <td
                        className={
                          Object {
                            "data-css-fl9ufm": "",
                          }
                        }
                        data-test-id="property: undefined"
                      >
                        <span
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": undefined,
                            }
                          }
                        />
                      </td>
                    </tr>
                  </Row>
                </Rows>
              </tbody>
            </table>
          </div>
        </Wrapper>
      </Content>
    </SurroundPortals>
  </ProductProperties>
</Connect(ProductProperties)>
`;
